deployment/deployment.yml
# apiVersion: argoproj.io/v1alpha1
# kind: Application
# metadata:
#   name: tfb-portal
#   namespace: argocd
# spec:
#   destination:
#     namespace: tfb-backend
#     server: https://kubernetes.default.svc
#   project: default
#   source:
#     path: kubernetes/backend/backstage
#     repoURL: git@github.com:theflyingbirdsmc/Improved-Infrastructure.git
#     targetRevision: HEAD
#   syncPolicy:
#     comparedTo:
#       destination:
#         namespace: tfb-backend
#         server: https://kubernetes.default.svc
#       source:
#         path: kubernetes/backend/backstage
#         repoURL: git@github.com:theflyingbirdsmc/Improved-Infrastructure.git
#         targetRevision: HEAD
#   syncPolicy:
#     automated:
#       prune: true
#       selfHeal: true
#     syncOptions:
#     - CreateNamespace=true
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: tfb-backend
  labels:
    backstage.io/kubernetes-id: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
      - image: docker.theflyingbirds.net/backstage:latest
        imagePullPolicy: Always
        name: backstage
        ports:
        - containerPort: 7007
          name: backstage
          protocol: TCP
      - image: postgres:latest
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
          protocol: TCP
      imagePullSecrets:
      - name: regcred
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tfb-backend
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: postgres
  selector:
    app: backstage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: tfb-backend
  annotations:
    cert-manager.io/cluster-issuer: theflyingbirds-prod
spec:
  tls:
  - hosts:
    - portal.theflyingbirds.net
    secretName: backstage-tls
  rules:
  - host: portal.theflyingbirds.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage-service
            port:
              number: 7007
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-service
  namespace: tfb-backend
spec:
  type: ClusterIP
  ports:
  - name: backstage-http
    port: 7007
    targetPort: 7007
  selector:
    app: backstage
